# Robust-Attack-Detectors-LLM

./: .env_template  .gitignore  Dockerfile  Dockerfile_devcontainer  LICENSE  README.md  accuracies.csv.dvc  accuracies.json.dvc  accuracies_sqli.csv.dvc  artifacts.md  big.csv.dvc  big_sqli.csv.dvc  dvc.yaml  experiments.dvc  experiments_summary_test.csv  flowcharts.dvc  google_drive_credentials_template.json  new_experiments_sap.dvc  new_experiments_sap_open_source.dvc  new_experiments_sap_sqli.dvc  output.dvc  params.yaml  plots.dvc  plots_rq2.csv  plots_rq2.csv.dvc  plots_rq2_f2.csv.dvc  plots_rq2_sqli.csv.dvc  plots_rq2_sqli_f2.csv.dvc  plots_test.dvc  pyproject.toml  pyrightconfig.json  ranking_dataset_output.dvc  removed_from_dvc.yaml  results.md  rq1.csv  rq1.csv.dvc  rq1_f2.csv.dvc  rq1_f2_sqli.csv.dvc  rq1_large.csv.dvc  rq1_large_f2.csv.dvc  (+28 more)
.devcontainer/: devcontainer.json
.dvc/: .gitignore  config
data/: .gitignore  FMereani.csv.dvc  Sofia.dvc  db.dvc  example_templates.dvc  papers.dvc  papers_sqli.dvc  payload_mixed.csv.dvc  placeholders.txt.dvc  prompt_parameters.dvc  synthetic_datasets.dvc  synthetic_datasets_sap.dvc  synthetic_datasets_sap_sqli.dvc  tasks.dvc  templates.dvc
docs/: artifacts.md  results.md
notebooks/: create_numbers_for_introduction.ipynb  create_pipeline_command.ipynb  create_sqli_command.ipynb  create_sqli_synth_dataset_command.ipynb  create_synth_dataset_command.ipynb  create_xss_command.ipynb  create_xss_synth_dataset_command.ipynb  explore_code_llm.ipynb  explore_dataset.ipynb  explore_few_shot.ipynb  explore_final_split.ipynb  explore_hf_langchain.ipynb  explore_langchain.ipynb  explore_rag_papers.ipynb  explore_rq_tables.ipynb  explore_rq_tables_gen.ipynb  explore_sql_placeholders.ipynb  explore_sqli_dataset.ipynb  explore_synthetic_data.ipynb  explore_winners.ipynb  statistical_rq1.ipynb  statistical_rq2.ipynb
src/: balance_dataset.py  calculate_sofia_results.py  collect_accuracies_for_test.py  collect_accuracies_for_test_sqli.py  count_winners.py  dataset_split.py  evaluate_run.py  evaluate_run_on_synthetic.py  evaluate_runs_on_datasets.py  filter_dataset.py  filter_xss_with_oracle.py  find_sqli_dirs.sh  find_xss_dirs.sh  fix_dataset_quotes.py  generate_analyzed_summaries.py  generate_code_snippets.py  generate_density_plots.py  generate_density_plots_sqli.py  generate_experiments_summary.py  generate_plots.py  generate_rq1_f2_score.py  generate_rq1_f2_score_sqli.py  generate_rq_tables.py  generate_rq_tables_sqli.py  generate_subsets_of_syn.py  generate_synthetic_dataset.py  generate_synthetic_dataset_sqli.py  generate_top_k_plots.py  generation_test_pipeline.py  merge_log_files.py  merge_synth_rq_files.py  merge_synth_rq_files_sqli.py  rq4.py  (+14 more)
(+53 files in other folders)
