[tool.poetry]
name = "rag-secure-code-generation"
version = "0.1.0"
description = ""
authors = ["PasiniSamuele <samu.pasini98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dvc = "^3.30.3"
dvc-gdrive = "^2.20.0"
pandas = "^2.1.3"
langchain = "^0.0.345"
huggingface-hub = "^0.19.4"
tqdm = "^4.66.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
