[tool.poetry]
name = "security_functions_llms"
version = "0.1.0"
description = ""
authors = ["anonymous"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dvc = "^3.30.3"
dvc-gdrive = "^2.20.0"
pandas = "^2.1.3"
langchain = "^0.0.345"
huggingface-hub = "^0.19.4"
tqdm = "^4.66.1"
transformers = "4.33.2"
torch = {version = "1.13.1+cu117", source = "torch"}
python-dotenv = "^1.0.0"
sentencepiece = "^0.1.99"
tiktoken = "^0.5.2"
bitsandbytes = "^0.41.3"
scipy = "^1.11.4"
accelerate = "^0.25.0"
openai = "^1.3.8"
seaborn = "^0.13.0"
chromadb = "^0.4.20"
bs4 = "^0.0.1"
lxml = "^4.9.4"
frontend = "^0.0.3"
pymupdf = "^1.23.8"
langchainhub = "^0.1.14"
levenshtein = "^0.25.0"
requests = "^2.31.0"
zss = "^1.2.0"
validators = "^0.28.3"
nltk = "^3.8.1"
scikit-learn = "^1.5.0"
tensorboard = "^2.16.2"
torch-tb-profiler = "^0.4.3"
sentence-transformers = "2.2.2"
instructorembedding = "^1.0.1"
statannot = "^0.2.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu117"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
